2010-12-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16674: htmlARea RTE: Broken/missing labels in context menu

2010-12-03  Ingo Renner  <ingo@typo3.org>

	* Follow-up to #16396: cleaned up code, fixed naming convention violations

2010-12-03  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16396: cleanup code, added phpDoc and XCLASS definition

2010-12-02  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16645: EM - Install extension with dependency

2010-12-02  Ernesto Baschny  <ernesto@typo3.org>

	* Release of TYPO3 4.5.0beta2

2010-12-01  Ernesto Baschny  <ernst@cron-it.de>

	* Added Feature #15604: Install-Tool usability: db compare shows no errors when db-updates fail
	* Fixed bug #16594: Slide doesn't work without collect (Thanks to Jo Hasenau)
	* Fixed bug #16601: tslib_menu and tslib_Xmenu use wrong cObj with stdWrap (since #16446) (Thanks to Thomas Maroschik)
	* Fixed bug #15794: File>List (and other new sysext) shown even though extension not installed
	* Fixed bug #16639: DBAL auto-loading rendered the Install Tool unuseable (was switching mode to "123")
	* Added Feature #16610: Provide a SwiftMailer transport that only saves send mails to files (mbox format)
	* Fixed bug #16643: New sysext modules are placed incorrectly in the Web> module menu. First step: remove hardcoded positions

2010-12-01  Francois Suter  <francois@typo3.org>

	* Feature #16609: Usability: Add new label for workspace preview

2010-12-01  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16267 catch empty language selection
	* Fixed bug #16267 Add functions to provide mocks for makeInstance (Thanks to Oliver Klee)
	* Added Feature #16642: New extension manager part 2: Add ExtJs Module
	* Follow-up to #16234: ExtDirect Dataprovider for user settings
	* Added Feature #16641: Here comes FAL - beta2 version
	* Fixed bug #16234: ExtDirect Dataprovider for user settings
	* Follow-up to bug #16624: Decrease opacity of black ExtJS mask - make mask message readable